Enable native build for vacuums.

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,3 +1,5 @@
+FROM ghcr.io/zackelia/sunxi-vacuum-toolchain:0.1.1 AS toolchains
+
 FROM ubuntu:jammy
 
 RUN apt update && \
@@ -9,8 +11,8 @@ RUN apt update && \
     python3 \
     python3-pip \
     python3-venv \
-    pkg-config \ 
-    libssl-dev \ 
+    pkg-config \
+    libssl-dev \
     libdbus-1-dev \
     libglib2.0-dev \
     libavahi-client-dev \
@@ -35,5 +37,15 @@ RUN groupadd --gid $USER_GID $USER_NAME \
 
 # Give the user sudo permissions
 RUN echo "$USER_NAME ALL=(ALL:ALL) NOPASSWD:ALL" >> /etc/sudoers
+
+COPY --link --from=toolchains /opt/x-tools/ /opt/x-tools
+
+# TODO: Figure out how to change Matter toolchain prefix.
+RUN cd /opt/x-tools/aarch64-unknown-linux-gnu/bin && \
+    ln -s aarch64-unknown-linux-gnu-ar aarch64-linux-gnu-ar && \
+    ln -s aarch64-unknown-linux-gnu-gcc aarch64-linux-gnu-gcc && \
+    ln -s aarch64-unknown-linux-gnu-g++ aarch64-linux-gnu-g++
+
+ENV PATH=/opt/x-tools/aarch64-unknown-linux-gnu/bin:$PATH
 
 CMD ["/bin/bash"]
