--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -14,5 +14,9 @@
             ]
         }
     },
-    "containerUser": "user"
+    "containerUser": "user",
+    "mounts": [
+        "type=bind,readonly,source=/etc/localtime,target=/etc/localtime",
+        "type=bind,readonly,source=/etc/timezone,target=/etc/timezone"
+    ]
 }
