--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
+    "clangd.path": "/usr/local/bin/clangd",
     "clangd.arguments": [
         "--compile-commands-dir=${workspaceFolder}/out/host/"
     ]
