Supress CMake pop-up in VSCode.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
     "clangd.path": "/usr/local/bin/clangd",
     "clangd.arguments": [
         "--compile-commands-dir=${workspaceFolder}/out/host/"
-    ]
+    ],
+    "cmake.configureOnOpen": false,
 }
