--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,4 +5,5 @@
         "--compile-commands-dir=${workspaceFolder}/out/host/"
     ],
     "cmake.configureOnOpen": false,
+    "editor.formatOnSave": true
 }
